app/assets/stylesheets/style.css
body {
  margin: 0;
  padding: 0;
}
.wrapper {
  display: grid;
  grid-template-columns: 1fr 10fr 1fr;
  grid-template-rows: 130px auto;
  grid-template-areas:
    "header header header"
    ". main .";
}

.header{
  grid-area: header;
  display: grid;
  grid-template-columns: 1fr 10fr 1fr;
  grid-template-rows: 50px 80px;
  grid-template-areas:
    "nav nav nav"
    ". search ."
}

.nav {
  grid-area: nav;
  background: #0F2041;
  box-shadow: 0px 1px 3px #0F2041;
  list-style: none;
  margin: 0;
  padding: 0;
}

.nav h1 {
  color: white;
  display: inline-block;
  float: left;
  margin-left: 1em;
  margin-right: 1em;
  margin-top: .25em;
  padding: 0;
}

.nav li {
  display: inline-block;
  float: left;
  margin-top: 1em;
  color: white;
}

.nav li a{
  color: white;
  text-decoration: none;
  margin: 1em;
  padding: 1em;
}

.nav li a:hover {
  background-color: #135fd8;
}

.nav li.welcome {
  float:right;
  margin-right: 2em;
}

.search {
  grid-area: search;
  align-self: center;
  margin-left: 3%;
}

.search input#gift_search {
  position: relative;
  width: 88%;
  height: 2em;
  font-size: 1em;
  border: 1px solid #0F2041;
  border-radius: 5px;
  border-top-right-radius: 0;
  border-bottom-right-radius: 0;
  padding-left: 20px;
}

.search button.search_btn {
  position: absolute;
  width: 4em;
  height: 3.25em;
  border-radius: 5px;
  background: #135fd8;
  border: 1px solid #0F2041;
  border-left: 0px;
  border-top-left-radius: 0;
  border-bottom-left-radius: 0;
  font-family: FontAwesome, 'Helvetica Neue', Helvetica, Arial, sans-serif;
  color: white;
}

.main {
  grid-area: main;
}

.gift_list {
  list-style: none;
  display:grid;
  grid-template-columns: repeat(auto-fit, minmax(auto, 250px));
  grid-template-rows: auto;
  grid-gap: 1em;
}

.gift_list li {
  display: inline-block;
  border:1px solid #0F2041;
  border-radius: 5px;
  padding: 1em;
}

